Fixed the white space between the footer img and the footer.

--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@ nav{
 }
 .feeties{
 	padding-top: 8.5rem;
+	margin-top: -2.5rem;
 }
 .footer_img{
 	width: 100%;
